@@ -4,9 +4,6 @@ TODO-list for amaroK
 
 SHORT-TERM:
 
-    * fix: load playlist _after_ showing mainwidget (and asyncronously if possible, at least
-      give ui a chance every 100 read entries or so).
-
     * fix: opening hidden directories is impossible in filebrowser
 
     * fix: shortcuts not saved (?)
